@@ -137,8 +137,10 @@ public class Figure extends Environment {
     @Override
     public ObjectNode toJsonEditor() throws NullPointerException, ProcessingException, IOException {
         ObjectNode node = super.toJsonEditor();
-        node.put("image", convertFile(Printer.getFigurePath() + "/" + this.graphic));
-        node.put("mimeType", extractMimeType());
+
+        String[] file = convertFile();
+        node.put("image", file[0]);
+        node.put("mimeType", file[1]);
 
         if(this.captions != null && !this.captions.isEmpty()) {
             ArrayNode captionNode = JsonNodeFactory.instance.arrayNode();
@@ -161,8 +163,9 @@ public class Figure extends Environment {
         node.put("elementID", this.getId().toString());
         node.put("content", "");
 
-        node.put("image", convertFile(Printer.getFigurePath() + "/" + this.graphic));
-        node.put("mimeType", extractMimeType());
+        String[] file = convertFile();
+        node.put("image", file[0]);
+        node.put("mimeType", file[1]);
 
         if (this.getParentElement() == null) {
             node.put("parentID", "null");
@@ -179,26 +182,27 @@ public class Figure extends Environment {
         return arrayNode;
     }
 
-    private String convertFile(String path) throws IOException {
+
+    /**
+     * Converts the graphic on the specified Path to a String representation and extracts the MIME-Type
+     * @return String[] with the first entry being the Base64 encoded String and the second entry being the MIME-Type
+     * @throws IOException if the file could not be read
+     */
+    private String[] convertFile() throws IOException {
+        String[] file = new String[2];
         try {
-            Path location = Paths.get(path);
+            Path location = Paths.get(Printer.getFigurePath() + "/" + this.graphic);
 
             Resource resource = new UrlResource(location.toUri());
 
             byte[] imageBytes = resource.getInputStream().readAllBytes();
-            String base64Image = Base64.getEncoder().encodeToString(imageBytes);
-            return base64Image;
-        } catch (IOException e) {
-            Path location = Paths.get("SpringApplication/src/main/resources/Images/ImageNotFound.txt");
-            return Files.readString(location);
+            file[0] = Base64.getEncoder().encodeToString(imageBytes);
+            file[1] = Files.probeContentType(Path.of(this.graphic));;
+        } catch (IOException | NullPointerException e) {
+            Path location = Paths.get("src/main/resources/Images/ImageNotFound.txt");
+            file[1] = "image/jpg";
+            file[0] = Files.readString(location);
         }
-    }
-
-    private String extractMimeType() {
-        try {
-            return Files.probeContentType(Paths.get(this.graphic));
-        } catch (IOException e) {
-            return "image/jpg";
-        }
+        return file;
     }
 }
